updated code for html

--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
 						</ul>
 					</nav>
 				</header>
-
+          
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Hi ! I'm Nirjara Mhaskar</h2>
+							<!--<h2>Hi ! I'm Nirjara Mhaskar</h2>
 							<p> Full Stack Developer Innovating User-Centric Paradigms | Resilient Technologist & Learner |
-							</p>
+							</p>-->
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image" ><img src="images/pic01.jpg" alt="" /></span>
+						<h2>Hi ! I'm Nirjara Mhaskar</h2>
+							<h3> Full Stack Developer Innovating User-Centric Paradigms | Resilient Technologist & Learner |
+							</h3>
 					</div>
+					
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
